apps/dashboard/overlays/dev/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress
spec:
  tls:
  - hosts:
    - dashboarddev.wolfixor.shop
    secretName: dashboard-dev-tls
  rules:
  - host: dashboarddev.wolfixor.shop
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dashboard-app
            port:
              number: 80
